[TFLite] Add TFLite project placeholder
Change-Id: I33a79f82227209daf1820e7cf07c5cfe91234b43

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@ djl_version=0.9.0
 mxnet_version=1.7.0-backport
 pytorch_version=1.7.0
 tensorflow_version=2.3.1
+tflite_version=2.3.1
 dlr_version=1.6.0
 onnxruntime_version=1.4.0
 sentencepiece_version=0.1.92
