--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,8 @@ include ':pytorch:pytorch-native'
 include ':onnxruntime:onnxruntime-engine'
 include ':dlr:dlr-native'
 include ':dlr:dlr-engine'
+include ':tflite:tflite-native'
+include ':tflite:tflite-engine'
 include ':testing'
 include ':extensions:aws-ai'
 include ':extensions:hadoop'
