--- a/tflite/tflite-engine/build.gradle
+++ b/tflite/tflite-engine/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     testRuntimeOnly project(":pytorch:pytorch-engine")
     testRuntimeOnly "ai.djl.pytorch:pytorch-native-auto:${pytorch_version}"
     testRuntimeOnly "org.slf4j:slf4j-simple:${slf4j_version}"
-    testRuntimeOnly "ai.djl.tflite:tflite-natiev-auto:${tflite_version}"
+    testRuntimeOnly "ai.djl.tflite:tflite-native-auto:${tflite_version}"
 }
 
 publishing {
