Move TensorflowLite java code into native module
Change-Id: If7cd66f55e8f9795a300c0669c4eb84e5ca4618a

--- a/tflite/tflite-native/build.gradle
+++ b/tflite/tflite-native/build.gradle
@@ -20,7 +20,7 @@ jar {
     doFirst {
         def versionName = project.version
         if (!isRelease) {
-            version += String.format("-%s", new Date().format('yyyyMMdd'))
+            versionName += String.format("-%s", new Date().format('yyyyMMdd'))
         }
         def dir = file("${placeholder}/native/lib")
         dir.mkdirs()
@@ -75,8 +75,8 @@ task downloadTfliteNativeLib() {
     doLast {
         def url = "https://djl-ai.s3.amazonaws.com/publish/tflite-${tflite_version}/jnilib"
         def files = [
-                "macOS/libtensorflowlite_jni.so": "cpu/osx/native/lib/libtflite.dylib",
-                "Linux/libtensorflowlite_jni.so": "cpu/linux/native/lib/libtflite.so"
+                "macOS/libtensorflowlite_jni.so": "cpu/osx/native/lib/libtensorflowlite_jni.dylib",
+                "Linux/libtensorflowlite_jni.so": "cpu/linux/native/lib/libtensorflowlite_jni.so"
         ]
 
         files.each { entry ->
@@ -121,6 +121,7 @@ flavorNames.each { flavor ->
             }
             from file("${BINARY_ROOT}/${flavor}/${osName}")
             from file("src/main/resources")
+            from file("${project.buildDir}/classes")
             archiveClassifier = "${osName}-x86_64"
         }
         artifactsNames.add(tasks["${flavor}-${osName}Jar"])
@@ -169,3 +170,7 @@ flavorNames.each { flavor ->
         }
     }
 }
+
+checkstyleMain.enabled = false
+pmdMain.enabled = false
+tasks.getByName("spotbugsMain").enabled = false
