--- a/tflite/tflite-engine/build.gradle
+++ b/tflite/tflite-engine/build.gradle
@@ -8,6 +8,7 @@ repositories {
 
 dependencies {
     api project(":api")
+    api "ai.djl.tflite:tflite-native-auto:${tflite_version}-SNAPSHOT"
 
     testImplementation("org.testng:testng:${testng_version}") {
         exclude group: "junit", module: "junit"
@@ -16,7 +17,6 @@ dependencies {
     testRuntimeOnly project(":pytorch:pytorch-engine")
     testRuntimeOnly "ai.djl.pytorch:pytorch-native-auto:${pytorch_version}"
     testRuntimeOnly "org.slf4j:slf4j-simple:${slf4j_version}"
-    testRuntimeOnly "ai.djl.tflite:tflite-native-auto:${tflite_version}-SNAPSHOT"
 }
 
 publishing {
