[tflite] Fix native publish issue
Change-Id: I5c8c15758aa5915488babd38e23644d1710c7dc2

--- a/tflite/tflite-native/build.gradle
+++ b/tflite/tflite-native/build.gradle
@@ -121,7 +121,7 @@ flavorNames.each { flavor ->
             }
             from file("${BINARY_ROOT}/${flavor}/${osName}")
             from file("src/main/resources")
-            from file("${project.buildDir}/classes")
+            from file("${project.buildDir}/classes/java/main")
             archiveClassifier = "${osName}-x86_64"
         }
         artifactsNames.add(tasks["${flavor}-${osName}Jar"])
